  * Add Pre-Depends on tar >= 1.23 (satisfied in stable) to dpkg due to it
    using the ‘--warning=no-timestamp’ option. Closes: 642802
  * Do not segfault on GNU/Linux when dpkg cannot retrieve the block size
    for the filesystem containing the info database. LP: #872734

  [ Raphaël Hertzog ]
  * Update Dpkg::Shlibs to look into multiarch paths when cross-building
    too. Closes: #595144

  [ Jonathan Nieder ]
  * Bump po4a version in Build-Depends to 0.41, since earlier versions do
    not handle --srcdir correctly.

  [ Updated dpkg translations ]
  * Italian (Milo Casagrande). Closes: #627832

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).
  * Spanish (Omar Campagne). Closes: #636238

  [ Updated man page translations ]
  * German (Helge Kreutzmann).
  * Spanish (Omar Campagne). Closes: #643969

 -- Helge Kreutzmann <debian@helgefjell.de>  Fri, 23 Sep 2011 17:29:38 +0200

dpkg (1.16.1.1) unstable; urgency=low

  [ Raphaël Hertzog ]
  * Fix dpkg-source to not ignore the automatic patch when checking
    for unrecorded changes. Closes: #643148
  * Let dpkg-source --commit create debian/patches when required.
    Closes: #643037
  * Fix dpkg-buildflags --dump to return 0 as exit code and not 1.
  * Update dpkg-buildflags(1) to not include quotes in the examples
    setting DEB_BUILD_MAINT_OPTIONS.
  * Stop outputting build flags in dpkg-buildpackage as it confuses
    maintainers who are overriding them in debian/rules and who
    are not seeing the expected value in the build log.
  * Fix trigger setup code to not reset the status of packages
    when they are in a status different from triggers-awaited,
    triggers-pending or installed. Closes: #644492
  * Fix dpkg-source to ignore changes on debian/patches/.dpkg-source-applied
    when building a "2.0" source package. Closes: #642656
  * Fix buildflags.mk to re-export the environment variables that
    the maintainer can use to change the build flags. Closes: #644412
