@@ -30,6 +30,8 @@ dpkg (1.16.2) UNRELEASED; urgency=low
   [ Raphaël Hertzog ]
   * Update Dpkg::Shlibs to look into multiarch paths when cross-building
     too. Closes: #595144
+  * Rewrite architecture.mk with explicit loops instead of duplicating many
+    similar lines. Based on a patch by Thorsten Glaser <tg@mirbsd.de>.
 
   [ Jonathan Nieder ]
   * Bump po4a version in Build-Depends to 0.41, since earlier versions do
